cmake_minimum_required(VERSION 3.0)

#set the project name
project(find_motive)

add_executable(main main.cpp)

#add the lib
#add_library(my_source SHARED sources.cpp)

#add another
#add_library(my_source_2 SHARED sources_2.cpp)

#add executable
#add_executable(main main.cpp)

#do not forget to link
#target_link_libraries(main my_source)

#target_link_libraries(main my_source_2)
